# OperatingSystemAlgorithm

./: .gitignore  1  Banker.c  Banker_@.c  Bankerpreinput.txt  CMakeLists.txt  FCFS  FCFS.c  README.md  a2d.c  fileinput.c  filesystem.c  findsafeTest.c  giao.c  main.c  minitest.c  play.c  testfunc.c  ╨┬╜и╬─▒╛╬─╡╡.txt
PS/: FCFS.c  MyTime.h  PRIORITY.c
