cmake_minimum_required(VERSION 3.13)
project(Os)

set(CMAKE_C_STANDARD 99)

set(CMAKE_C_SOURCE_FILE_EXTENSIONS main.c)
add_executable(Os
#        main.c
#        minitest.c
#        testfunc.c
#        fileinput.c
        PS/PRIORITY.c
        PS/MyTime.h
#        PS/FCFS.c
#        Banker.c
        )